Fix news.html validation

--- a/docs/news.html.in
+++ b/docs/news.html.in
@@ -21,11 +21,11 @@ and check the <a href="ChangeLog.html">ChangeLog</a> to gauge progress.</p>
       Fix typo in error message (Matthew Booth)
       esx: Add documentation to the website (Matthias Bolte)
       AppArmor updates of examples (Jamie Strandboge)
-      Add documentation for <channel> domain element (Matthew Booth)
+      Add documentation for &lt;channel&gt; domain element (Matthew Booth)
       Separate character device doc guest and host parts (Matthew Booth)
       Add a Python example that lists active ESX domains (Matthias Bolte)
       LXC fix wrong or out-of-date function descriptions (Ryota Ozaki)
-      docs: <clock> property is 'offset', not 'sync' (Cole Robinson)
+      docs: &lt;clock&gt; property is 'offset', not 'sync' (Cole Robinson)
       Update the documentation for virDomainMigrateToURI (Chris Lalancette)
       fix virDomainMigrateToURI doc (Dan Kenigsberg)
       </li>
@@ -118,7 +118,7 @@ and check the <a href="ChangeLog.html">ChangeLog</a> to gauge progress.</p>
       test: Add testDomainShutdownState helper (Cole Robinson)
       Properly convert port numbers to/from network byte order (Matthew Booth)
       phyp add create() and destroy() support (Eduardo Otubo)
-      Support for <channel> in domain and QEmu backend (Matthew Booth)
+      Support for &lt;channel&gt; in domain and QEmu backend (Matthew Booth)
       Detect availability of QEMU -chardev CLI option (Matthew Booth)
       Allow character devices to have different target types (Matthew Booth)
       LXC allow container to have ethN interfaces (Ryota Ozaki)
