--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -178,7 +178,8 @@ VBOX_DRIVER_SOURCES =						\
         vbox/vbox_XPCOMCGlue.c vbox/vbox_XPCOMCGlue.h		\
         vbox/vbox_driver.c vbox/vbox_driver.h			\
         vbox/vbox_V2_2.c vbox/vbox_CAPI_v2_2.h			\
-        vbox/vbox_V3_0.c vbox/vbox_CAPI_v3_0.h
+        vbox/vbox_V3_0.c vbox/vbox_CAPI_v3_0.h			\
+        vbox/vbox_V3_1.c vbox/vbox_CAPI_v3_1.h
 
 VBOX_DRIVER_EXTRA_DIST = vbox/vbox_tmpl.c vbox/README
 
