Add virBufferFreeAndReset() and replace free()
Replace free(virBufferContentAndReset()) with virBufferFreeAndReset().
Update documentation and replace all remaining calls to free() with
calls to VIR_FREE(). Also add missing calls to virBufferFreeAndReset()
and virReportOOMError() in OOM error cases.

--- a/docs/hacking.html.in
+++ b/docs/hacking.html.in
@@ -306,14 +306,15 @@
      ...
 
      virBufferAddLit(&amp;buf, "&lt;domain&gt;\n");
-     virBufferVSprint(&amp;buf, "  &lt;memory>%d&lt;/memory&gt;\n", memory);
+     virBufferVSprint(&amp;buf, "  &lt;memory&gt;%d&lt;/memory&gt;\n", memory);
      ...
      virBufferAddLit(&amp;buf, "&lt;/domain&gt;\n");
 
-     ....
+     ...
 
      if (virBufferError(&amp;buf)) {
-         __virRaiseError(...);
+         virBufferFreeAndReset(&amp;buf);
+         virReportOOMError(...);
          return NULL;
      }
 
