add AppArmor test and examples to dist
tests/virt-aa-helper-test and examples/apparmor are not included in
official tarballs, but should be. Attached is a patch to fix that
which works when apparmor is and is not available.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -135,7 +135,10 @@ endif
 
 if WITH_SECDRIVER_APPARMOR
 test_scripts += virt-aa-helper-test
+else
+EXTRA_DIST += virt-aa-helper-test
 endif
+
 EXTRA_DIST += $(test_scripts)
 
 TESTS = virshtest \
