--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,6 +2,7 @@ daemon/dispatch.c
 daemon/libvirtd.c
 daemon/remote.c
 daemon/stream.c
+src/conf/cpu_conf.c
 src/conf/domain_conf.c
 src/conf/interface_conf.c
 src/conf/network_conf.c
