--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -10,6 +10,9 @@ src/conf/node_device_conf.c
 src/conf/secret_conf.c
 src/conf/storage_conf.c
 src/conf/storage_encryption_conf.c
+src/cpu/cpu.c
+src/cpu/cpu_map.c
+src/cpu/cpu_x86.c
 src/datatypes.c
 src/interface/netcf_driver.c
 src/libvirt.c
