Adds CPU map for models and features
* src/cpu/cpu_map.xml: newdescription file
* src/Makefile.am: include it in dist

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -287,6 +287,8 @@ CPU_SOURCES =							\
 		cpu/cpu_x86.h cpu/cpu_x86.c cpu/cpu_x86_data.h	\
 		cpu/cpu_map.h cpu/cpu_map.c
 
+EXTRA_DIST += 	cpu/cpu_map.xml
+
 #########################
 #
 # Build up list of libvirt.la source files based on configure conditions
